--- a/css/style.css
+++ b/css/style.css
@@ -317,4 +317,18 @@ margin-top: 10px;
     color: #dbaa6d;
     padding-left: 15px;
     font-weight: 600;
+}::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    border-radius: 5px;
 }
